--- a/02_LESSON/about.html
+++ b/02_LESSON/about.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>About</title>
-        <link rel="icon" href="pngwing.com.png" type="image/x-icon">
-        <meta name="description" content=" Hola Hedwig Van Braco, this page is about me">
-        <link rel="stylesheet" href="main.css" type="text/css">
 
-    </head>
-    <body>
-      <h1>This is the creator of Only Pawtitas</h1>
-      <hr>
-<nav>
+<head>
+    <title>About</title>
+    <link rel="icon" href="pngwing.com.png" type="image/x-icon">
+    <meta name="description" content=" Hola Hedwig Van Braco, this page is about me">
+    <link rel="stylesheet" href="main.css" type="text/css">
+
+</head>
+
+<body>
+    <h1>This is the creator of Only Pawtitas</h1>
+    <hr>
+    <nav>
+        <ul>
+            <li>
+                <a href="#html">LEARN HTML</a>
+
+            </li>
+            <li>
+                <a href="vacation"> VACATION</a>
+            </li>
+        </ul>
+    </nav>
+    <hr>
+    <section>
+        <p1> Hedwig Van Braco es un excéntrico aficionado de los canes que ha dedicado toda su vida a preservar razas
+            exóticas de perros para las futuras generaciones.</p1>
+    </section>
+    <p2> Desde la temprana edad de 8, Hedwig adquirió su fascinación por los perros cuando Lola su primera perrita
+        falleció repentinamente dejando a sus cachorros indefensos. Fue entonces que Hedwig encontró una conexión
+        profunda con estos seres.</p2>
+    <hr>
+    <h2> About Hedwig Van Braco</h2>
+    <p3> Hedwig Van Braco fundó Only Pawtitas en 2009 con el objetivo de recaudar fondos para el estudio de la
+        preservación de las razas caninas, así como para generar campañas contra el maltrato animal. Licenciado en
+        Zootecnia por la universidad de Groninghem. Galardonado con diferentes premios por sus investigaciones y
+        apartaciones al campo de la zootecnia</p3>
+    <hr>
     <ul>
-        <li>
-            <a href="#html">LEARN HTML</a>
-           
-        </li>
-        <li>
-            <a href="vacation"> VACATION</a>
-        </li>
+        <li>Download a <a href="pngwing.com.png" Download>Download pawtitas icon</a></li>
     </ul>
-</nav>
-      <hr>
-      <section>
-      <p1> Hedwig Van Braco es un excéntrico aficionado de los canes que ha dedicado toda su vida a preservar razas exóticas de perros para las futuras generaciones.</p1>
-       </section>
-<p2> Desde la temprana edad de 8, Hedwig adquirió su fascinación por los perros cuando Lola su primera perrita falleció repentinamente dejando a sus cachorros indefensos. Fue entonces que Hedwig encontró una conexión profunda con estos seres.</p2>
-<hr> 
-<h2> About Hedwig Van Braco</h2>
-<p3> Hedwig Van Braco fundó Only Pawtitas en 2009 con el objetivo de recaudar fondos para el estudio de la preservación de las razas caninas, así como para generar campañas contra el maltrato animal. Licenciado en Zootecnia por la universidad de Groninghem. Galardonado con diferentes premios por sus investigaciones y apartaciones al campo de la zootecnia</p3>
-<hr>
-<ul>
-<li>Download a <a href="pngwing.com.png"Download>Download pawtitas icon</a></li>
-</ul>
-<hr>
+    <hr>
     <ul>
         <li>
             Contact me <a href="mailto:random@email.com"> at my email adress</a>
@@ -49,5 +57,6 @@
     <p>
         <a href="/"> Back to home</a>
     </p>
-    </body>
+</body>
+
 </html>
