arregla ruta archivo

--- a/02_LESSON/about.html
+++ b/02_LESSON/about.html
@@ -39,7 +39,7 @@
         apartaciones al campo de la zootecnia</p3>
     <hr>
     <ul>
-        <li>Download a <a href="pngwing.com.png" Download>Download pawtitas icon</a></li>
+        <li>Download a <a href="pngwing.png" Download>Download pawtitas icon</a></li>
     </ul>
     <hr>
     <ul>
