cambia el tamaño de la imagen principal.

--- a/LITTLE TACO SHOP/LTS.html
+++ b/LITTLE TACO SHOP/LTS.html
@@ -23,7 +23,7 @@
         </li>
     </ul>
     <figure>
-        <img src="img/taco1.jpeg" alt="taco1">
+        <img src="img/taco1.jpeg" alt="taco1" height="200">
         <figcaption>
             Our delicious tacos served fresh!
         </figcaption>
